Added in Skills section to about page

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 
     <div id="contact">
 
-      <p class="sectionTitle">Jessica Davies</p>
+      <p class="sectionTitleJ">Jessica Davies</p>
 
       <p id="jobTitle">
         Strategist | UX Designer | Heathcare SME
@@ -92,6 +92,324 @@
     </div>
 
     <div id="approach"><p class="sectionTitle">Approach</p></div>
+<!-- SKILL TABLES -->
+<div class="tableTitle"><p class="tableTitleP">UX Methods</p></div>
+    <div class="softDiv">
+            <table class="swTable" >
+              <tr>
+                <th class="method">Method</th>
+                <th class="grade">Level</th>
+              </tr>
+                <tr>
+                  <td class="method">Body storming</td>
+                  <td class="grade">Advanced</td>
+                  <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Competitive analysis</td>
+                  <td class="grade">Expert</td>
+                  <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Design Studio</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Empathy mapping</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Guerilla research</td>
+                  <td class="grade">Expert</td>
+                  <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Heuristic evaluation</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+
+            </table>
+
+            <table class="swTable" >
+              <tr>
+                <th class="method">Method</th>
+                <th class="grade">Level</th>
+              </tr>
+
+              <tr>
+                <td class="method">Ideation</td>
+                <td class="grade">Advanced</td>
+                <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+              </tr>
+
+                <tr>
+                  <td class="method">Interviews</td>
+                  <td class="grade">Expert</td>
+                  <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Journey mapping</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Market Research</td>
+                  <td class="grade">Expert</td>
+                  <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Personas</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Rapid prototyping</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+
+            </table>
+
+            <table class="swTable" >
+              <tr>
+                <th class="method">Method</th>
+                <th class="grade">Level</th>
+              </tr>
+
+              <tr>
+                <td class="method">Site mapping</td>
+                <td class="grade">Intermediate</td>
+                <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+              </tr>
+                <tr>
+                  <td class="method">Sketching</td>
+                  <td class="grade">Advanced</td>
+                  <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Surveys</td>
+                  <td class="grade">Advanced</td>
+                  <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Task analysis</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">User flows</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">User research</td>
+                  <td class="grade">Advanced</td>
+                  <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                </tr>
+
+            </table>
+          </div>
+
+<div class="tableTitle"><p class="tableTitleP">Software &amp Languages</p></div>
+    <div class="softDiv">
+
+              <table class="swTable" >
+                <tr>
+                  <th class="method">Software</th>
+                  <th class="grade">Level</th>
+                </tr>
+                  <tr>
+                    <td class="method">Atom/Sublime</td>
+                    <td class="grade">Intermediate</td>
+                    <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                  </tr>
+                  <tr>
+                    <td class="method">Bootstrap</td>
+                    <td class="grade">Intermediate</td>
+                    <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                  </tr>
+
+                  <tr>
+                    <td class="method">Firebase</td>
+                    <td class="grade">Beginner</td>
+                    <td><img class ="software" alt="Turkey Emoji" src="myimages/about/turkey-emoji.png"></td>
+                  </tr>
+
+                  <tr>
+                    <td class="method">GitHub</td>
+                    <td class="grade">Intermediate</td>
+                    <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                  </tr>
+                  <tr>
+                    <td class="method">InVision</td>
+                    <td class="grade">Intermediate</td>
+                    <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                  </tr>
+
+              </table>
+
+              <table class="swTable">
+                <tr>
+                  <th class="method">Software</th>
+                  <th class="grade">Level</th>
+                </tr>
+                <tr>
+                  <td class="method">Keynote</td>
+                  <td class="grade">Advanced</td>
+                  <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                </tr>
+                  <tr>
+                    <td class="method">Omnigraffle</td>
+                    <td class="grade">Beginner</td>
+                    <td><img class ="software" alt="Turkey Emoji" src="myimages/about/turkey-emoji.png"></td>
+                  </tr>
+                  <tr>
+                    <td class="method">Pop</td>
+                    <td class="grade">Advanced</td>
+                    <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                  </tr>
+                  <tr>
+                    <td class="method">Sketch3</td>
+                    <td class="grade">Advanced</td>
+                    <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                  </tr>
+
+                  <tr>
+                    <td class="method">Trello</td>
+                    <td class="grade">Intermediate</td>
+                    <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                  </tr>
+              </table>
+              <table class="swTable">
+                <tr>
+                  <th class="method">Language</th>
+                  <th class="grade">Level</th>
+                </tr>
+
+                <tr>
+                  <td class="method">CSS</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+
+                <tr>
+                  <td class="method">HTML</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">iOS/Swift</td>
+                  <td class="grade">Beginner</td>
+                  <td><img class ="software" alt="Turkey Emoji" src="myimages/about/turkey-emoji.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Java Script</td>
+                  <td class="grade">Intermediate</td>
+                  <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                </tr>
+                <tr>
+                  <td class="method">Ruby</td>
+                  <td class="grade">Beginner</td>
+                  <td><img class ="software" alt="Turkey Emoji" src="myimages/about/turkey-emoji.png"></td>
+                </tr>
+
+            </table>
+
+</div>
+            <div class="tableTitle"><p class="tableTitleP">Other Skills</p></div>
+                <div class="softDiv">
+
+                          <table class="swTable">
+                            <tr>
+                              <th class="method">Skill</th>
+                              <th class="grade">Level</th>
+                            </tr>
+
+                            <tr>
+                              <td class="method">Analytics</td>
+                              <td class="grade">Expert</td>
+                              <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                            </tr>
+
+                            <tr>
+                              <td class="method">Business Development</td>
+                              <td class="grade">Advanced</td>
+                              <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                            </tr>
+                              <tr>
+                                <td class="method">Corporate strategy</td>
+                                <td class="grade">Expert</td>
+                                <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                              </tr>
+
+                              <tr>
+                                <td class="method">Finance</td>
+                                <td class="grade">Expert</td>
+                                <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                              </tr>
+
+                          </table>
+
+                          <table class="swTable">
+                            <tr>
+                              <th class="method">Skill</th>
+                              <th class="grade">Level</th>
+                            </tr>
+
+                            <tr>
+                              <td class="method">Financial modeling</td>
+                              <td class="grade">Expert</td>
+                              <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                            </tr>
+                            <tr>
+                              <td class="method">Healthcare</td>
+                              <td class="grade">Expert</td>
+                              <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                            </tr>
+                              <tr>
+                                <td class="method">Pitch books</td>
+                                <td class="grade">Advanced</td>
+                                <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                              </tr>
+                              <tr>
+                                <td class="method">Presentations</td>
+                                <td class="grade">Expert</td>
+                                <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
+                              </tr>
+
+                          </table>
+                          <table class="swTable">
+                            <tr>
+                              <th class="method">Skill</th>
+                              <th class="grade">Level</th>
+                            </tr>
+                            <tr>
+                              <td class="method">Portuguese</td>
+                              <td class="grade">Beginner</td>
+                              <td><img class ="software" alt="Turkey Emoji" src="myimages/about/turkey-emoji.png"></td>
+                            </tr>
+                            <tr>
+                              <td class="method">Public speaking</td>
+                              <td class="grade">Advanced</td>
+                              <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
+                            </tr>
+
+                            <tr>
+                              <td class="method">Spanish</td>
+                              <td class="grade">Intermediate</td>
+                              <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                            </tr>
+
+                            <tr>
+                              <td class="method">Raising capital</td>
+                              <td class="grade">Intermediate</td>
+                              <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
+                            </tr>
+                        </table>
+        </div>
 
 <!-- content div -->
   </div>
