Refining formatting to meet style-guide

--- a/tier5.html
+++ b/tier5.html
@@ -68,7 +68,7 @@
 
         </div>
         <div class="introBoxes row">
-          <div class="introBox col-xs-6 ">
+          <div class="introBox col-xs-6">
             <!-- <div class="center-block"> -->
             <p class="boxTitle">The Client</p>
             <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to give their outbound sales-lead generating platform a visual facelift. But after our extensive research we found the Company's UX Design and even part of their business model also needed a rebuild. Our redesign increased their market opportunity by 3x.
@@ -76,7 +76,8 @@
             <!-- </div> -->
           </div>
 
-          <div class="introBox col-xs-6 col-md-offset-1">
+          <div class="introBox col-xs-6 col-md-offset-1 ">
+            <!-- col-md-offset-1 -->
               <!-- <div class="center-block"> -->
             <p class="boxTitle">My Role</p>
             <p class="boxText heavyText">Over 2 a two-week period our very close-knit, two-person team worked collaboratively on every aspect of UX Design process: research, heuristic evaluation, competitive analysis, user interviews, user testing, design, sketching, prototyping, and presenting our work.
@@ -100,9 +101,9 @@
             </div>
         </div>
 
-        <div class="processSectionTitle row" id="strategySection">Strategy</div>
+        <div class="processSectionTitle row processCircleFix">Strategy</div>
 
-        <div class= "ourApproachTitle">Our Strategic Approach</div>
+        <div class= "ourApproachTitle octoGreen">Our Strategic Approach</div>
 
   <div class="approach">
 
@@ -140,44 +141,6 @@
           </div>
   </div>
 
-<!--
-old code
-        <div class="approach">
-
-          <div class="approach1 approachSections">
-            <div class="approachCircle"><p class="approachNumber">1</p></div>
-            <div class="approachText">
-              <div class="approachPoints"><p>Always Consider the Business Needs &amp Goals</p></div>
-              <div class="approachSubPoints"><p>Start with the Business first<br>Increase Aquisition and Retention</br></p></div>
-            </div>
-          </div>
-
-          <div class="approach2 approachSections">
-            <div class="approachCircle"><p class="approachNumber">2</p></div>
-            <div class="approachText">
-              <div class="approachPoints"><p>Extensive Competitive Review</p></div>
-              <div class="approachSubPoints"><p>How salespeople think we stack up to the competition?
-              <br>Do we have the right business model?</br></p></div>
-            </div>
-          </div>
-
-          <div class="approach3 approachSections">
-            <div class="approachCircle"><p class="approachNumber">3</p></div>
-            <div class="approachText">
-              <div class="approachPoints"><p>In-depth Understanding of the User</p></div>
-              <div class="approachSubPoints"><p>Understand How sales people seek and use lead information</p></div>
-            </div>
-          </div>
-
-          <div class="approach4 approachSections">
-            <div class="approachCircle"><p class="approachNumber">4</p></div>
-            <div class="approachText">
-              <div class="approachPoints"><p>Redesign UI of Outbound Sales Platform</p></div>
-            </div>
-          </div>
-
-        </div> -->
-
       <div class="funnelLogos">
         <div><p class="statement">Small start-up can't be all things to all people.</p></div>
 
@@ -211,7 +174,7 @@ old code
 
     </div>
 
-      <div><p class="statement statmentOrange">Focus on competing only with lead/data generators.</p></div>
+      <div><p class="statement statmentOrange">Focus on competing only with lead generators.</p></div>
 <div class="table-responsive tableParent">
     <table class="compTable table table-borderless">
       <tr>
@@ -355,12 +318,12 @@ old code
     </table>
   </div>
 
-      <div><p class="statement">Opportunities to improve on the competition.</p></div>
+      <div><p class="statement statmentOrange">Opportunities to improve on the competition.</p></div>
       <div class="features">
       <img class="featureCompImg" alt="feature Prioritization Chart" src="myimages/tier5/strategy/feature-competition.png">
       </div>
 
-      <div><p class="statement">Recommendations</p></div>
+      <div><p class="statement">Recommendations.</p></div>
 
         <div class="circleRecWrapper">
 
@@ -441,7 +404,7 @@ old code
         </div>
       </div>
 
-  <div><p class="statement statmentOrange">Survey resulted in 4 key insights</p></div>
+  <div><p class="statement statmentOrange">Survey resulted in 3 key insights.</p></div>
 
 <div class="researchCirTri row">
     <div class="researchCircles col-xs-12 col-md-6">
@@ -457,7 +420,7 @@ old code
     </div>
   </div>
 
-<div><p class="statement">In-depth interview insights</p></div>
+<div><p class="statement">In-depth interview insights.</p></div>
 
 <div class="brainBackground">
 
@@ -547,7 +510,7 @@ old code
 </div>
 
 
-  <div><p class="statement">Initial research findings</p></div>
+  <div><p class="statement">Initial research findings.</p></div>
 
 <div class="findings">
     <div class="findingsCircle1"></div>
@@ -582,7 +545,7 @@ old code
   <img class="journeyMap" alt="Salesperson's Journey Map" src="myimages/tier5/synthesis/journey-map.png">
 </div>
 
-  <p class="statement">Our personas detail the two main types of salespeople</p>
+  <p class="statement">Our personas detail the two main types of salespeople.</p>
 
 <div class="row personaParent">
   <!-- Ajay -->
@@ -684,14 +647,14 @@ old code
 </table>
 </div>
     <div class="bracketDiv">
-        <img class="userBracket" alt="Downward facing bracket" src="myimages/tier5/synthesis/bracket.png">
-        <p class="userFlowTitle">Ajay&#39;s User Flow</p>
+        <!-- <img class="userBracket" alt="Downward facing bracket" src="myimages/tier5/synthesis/bracket.png"> -->
+        <p class="userFlowTitle octoGreen">Typical Salesperson's User Flow</p>
     </div>
     <div class="userFlow">
       <img class="userFlowImg" alt="Downward facing bracket" src="myimages/tier5/synthesis/user-flow.png">
     </div>
 
-    <div class="statement octoOrange">The problem: redefined</div>
+    <div class="statement octoOrange">The problem: redefined.</div>
 <div class="problem">
   <p class="problemTitle octoOrange">
     We found that the saleperson&#39;s problem is two fold:
@@ -707,7 +670,7 @@ old code
   <img class="venn" alt="Business-Design Goals Venn Diagram" src="myimages/tier5/synthesis/design-venn.png">
 </div>
 
-<div class="statement statmentOrange">Our solution: two high level experiences</div>
+<div class="statement statmentOrange">Our solution: two high level experiences.</div>
 
 <div class="experiences row">
   <div class="realTimeAndNur col-xs-12 col-sm-6">
@@ -744,11 +707,11 @@ old code
 
 </div>
 
-  <div class="statement featureTitleMargins">Initial concept &amp features</div>
+  <div class="statement featureTitleMargins">Initial concept &amp features.</div>
 
 <div class="featuresList row">
-  <div class="realTimeAndNur2 col-xs-12 col-sm-offset-1 col-sm-5">
-      <!-- <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6 col-md-offset-1 col-md-5 realTime"> -->
+  <div class="realTimeAndNur2 ">
+  <!-- <div class="realTimeAndNur2 col-xs-12 col-sm-offset-1 col-sm-5"> -->
         <p class="experienceTitleIcon">Real-Time Connections</p>
         <div class="iconSentence">
           <img class="featureIcon " alt="Funnel Icon" src="myimages/tier5/design/funnel-icon.png">
@@ -772,8 +735,8 @@ old code
         </div>
   </div>
 
-  <div class="realTimeAndNur2 col-xs-12 col-sm-offset-1 col-sm-5">
-  <!-- <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6  col-md-offset-1 col-md-5 "> -->
+  <div class="realTimeAndNur2">
+  <!-- <div class="realTimeAndNur2 col-xs-12 col-sm-offset-1 col-sm-5"> -->
             <p class="experienceTitleIcon">Nurturing Connections</p>
             <div class="iconSentence">
             <img class="featureIcon" alt="RSS Icon" src="myimages/tier5/design/rss-icon.png">
@@ -791,7 +754,7 @@ old code
         <!-- features -->
     </div>
 
-<div class="statement statementOrange">User testing</div>
+<div class="statement statementOrange">User testing.</div>
 
 <div class="testingCircleSec">
   <div class="userTestingRounds"><p >Three Rounds</p></div>
@@ -814,7 +777,7 @@ old code
   </div>
 </div>
 
-<div><p class="statement">User testing with paper prototypes</p></div>
+<div><p class="statement">User testing with paper prototypes.</p></div>
 
 <!-- top 3 paper proptotypes -->
   <div class="paperPrototypes">
@@ -852,7 +815,7 @@ old code
     </div>
   </div>
 
-<div><p class="statement">Usability testing: salespeople feedback</p></div>
+<div><p class="statement">Usability testing: salespeople feedback.</p></div>
 
 <div class="top3Bottom3">
 
@@ -940,7 +903,7 @@ old code
 <!-- grandparents
 </div> -->
 
-<div><p class="statement">Usability test findings</p></div>
+<div><p class="statement">Usability test findings.</p></div>
 
 <div class="findings2PParent row center-text">
   <div class="findings2P col-xs-12 col-sm-6 heavyText ">
@@ -956,7 +919,7 @@ old code
   </div>
 </div>
 
-<div><p class="statement statmentOrange">Design decisions</p></div>
+<div><p class="statement statmentOrange">Design decisions.</p></div>
 
 <div class="designDecisions">
 
@@ -1014,7 +977,7 @@ old code
     <p class="buildText">Our final interactive wireframes encompass a number of features, including a quick and easy on-boarding for new clients, multiple views, a connectivity layout via an API with LinkedIn, a lead newsfeed, sorting capabilities, analytics, and an individual search engine.</p>
 </div>
 
-<div><p class="statement statmentOrange">Before &amp After</p></div>
+<div><p class="statement statmentOrange">Before &amp After.</p></div>
 
 <div class="comparisons">
   <div class="listView">
@@ -1042,7 +1005,7 @@ old code
 
     </div>
 
-  <div><p class="statement statmentOrange">Our interactive prototype</div>
+  <div><p class="statement statmentOrange">Our interactive prototype.</div>
 
 <div class="prototypeLink">
   Click <a  href="https://invis.io/GM3VZTGAD">here</a> to see prototype.</div>
@@ -1090,7 +1053,7 @@ old code
 
 <!-- </div> -->
 
-<div class="statement statmentOrange">Next Steps &amp Roll Out Phases</div>
+<div class="statement statmentOrange">Next Steps &amp Roll Out Phases.</div>
 
 <div class="stepsParent">
   <div class="stepsSec">
