--- a/tier5.html
+++ b/tier5.html
@@ -175,7 +175,8 @@
     </div>
 
       <div><p class="statement statmentOrange">Focus on competing only with lead generators.</p></div>
-<div class="table-responsive tableParent">
+
+<div class="table-responsive tableParent center-table">
     <table class="compTable table table-borderless">
       <tr>
         <th></th>
@@ -404,11 +405,11 @@
         </div>
       </div>
 
-  <div><p class="statement statmentOrange">Survey resulted in 3 key insights.</p></div>
+  <div><p class="statement">Survey resulted in 3 key insights.</p></div>
 
 <div class="researchCirTri row">
     <div class="researchCircles col-xs-12 col-md-6">
-      <p class="titleP">Most salespeople are one of two main types:</p>
+      <p class="titleP octoOrange">Most salespeople are one of two main types:</p>
       <p class="heavyText">High Touch, Low Volume &nbsp;&nbsp;&nbsp;&nbsp; Low Touch, High Volume</p>
       <img class="circles3" alt="3 Circles" src="myimages/tier5/research/circles3.png">
     </div>
