--- a/tier5.html
+++ b/tier5.html
@@ -657,28 +657,32 @@
 
     <div class="statement octoOrange">The problem: redefined.</div>
 <div class="problem">
-  <p class="problemTitle octoOrange">
-    We found that the saleperson&#39;s problem is two fold:
-  </p>
-    <p> 1 Quickly finding targeted leads with correct contact details</p>
-    <p> 2 Difficult to find news and information to help "nurture" prospects</p>
+    <p class="problemTitle octoOrange">We found that the salesperson&#39;s problem is two fold:</p>
+    <div class="bullet">
+      <div class="decCircle"><p class="decNumber">1</p></div>
+      <div class="decText problemText"><p>Quickly finding targeted leads with correct contact details</p> </div>
+    </div>
+    <div class="bullet">
+      <div class="decCircle"><p class="decNumber">2</p></div>
+      <div class="decText problemText"><p>Finding adequate news and information to help "nurture" prospects</p> </div>
+    </div>
 </div>
 
-<p class="alignGoalsTitle OctoGreen">We Considered both User &amp Business Goals
+<p class="alignGoalsTitle">We Considered both User &amp Business Goals
 </p>
 <div class="alignCircles">
 
   <img class="venn" alt="Business-Design Goals Venn Diagram" src="myimages/tier5/synthesis/design-venn.png">
 </div>
 
-<div class="statement statmentOrange">Our solution: two high level experiences.</div>
+<div class="statement">Our solution: two high level experiences.</div>
 
 <div class="experiences row">
   <div class="realTimeAndNur col-xs-12 col-sm-6">
     <!-- col-xs-12 col-sm-6 -->
     <img class="pillar" alt="Pillar" src="myimages/tier5/synthesis/pillar.png">
     <div class="experienceText">
-      <p class="experienceTitle">Real-Time Connections</p>
+      <p class="experienceTitle octoOrange">Real-Time Connections</p>
       <p class="experienceSentence">Targeted, instant, generation of rich, relevant leads and accurate contact information in bulk</p>
     </div>
   </div>
@@ -687,7 +691,7 @@
     <!-- col-xs-12 col-sm-6 -->
       <img class="pillar" alt="Pillar" src="myimages/tier5/synthesis/pillar.png">
       <div class="experienceText">
-        <p class="experienceTitle">Nurturing Connections</p>
+        <p class="experienceTitle octoOrange">Nurturing Connections</p>
         <p class="experienceSentence">News and information to make effective connections and strong, first impressions</p>
       </div>
   </div>
@@ -708,14 +712,14 @@
 
 </div>
 
-  <div class="statement featureTitleMargins">Initial concept &amp features.</div>
+  <div class="statement statmentOrange featureTitleMargins">Initial concept &amp features.</div>
 
 <div class="featuresList row">
   <div class="realTimeAndNur2 ">
   <!-- <div class="realTimeAndNur2 col-xs-12 col-sm-offset-1 col-sm-5"> -->
-        <p class="experienceTitleIcon">Real-Time Connections</p>
+        <p class="experienceTitleIcon octoGreen">Real-Time Connections</p>
         <div class="iconSentence">
-          <img class="featureIcon " alt="Funnel Icon" src="myimages/tier5/design/funnel-icon.png">
+          <img class="featureIcon" alt="Funnel Icon" src="myimages/tier5/design/funnel-icon.png">
           <p class="experienceSentence2">Quick, easy-to-use filters to target leads</p>
         </div>
         <div class="iconSentence">
@@ -738,7 +742,7 @@
 
   <div class="realTimeAndNur2">
   <!-- <div class="realTimeAndNur2 col-xs-12 col-sm-offset-1 col-sm-5"> -->
-            <p class="experienceTitleIcon">Nurturing Connections</p>
+            <p class="experienceTitleIcon octoGreen">Nurturing Connections</p>
             <div class="iconSentence">
             <img class="featureIcon" alt="RSS Icon" src="myimages/tier5/design/rss-icon.png">
             <p class="experienceSentence2">Newsfeed, keep tabs on lead&#39;s activities</p>
@@ -784,17 +788,17 @@
   <div class="paperPrototypes">
     <div class="paperProtoDiv">
     <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch3.png">
-    <p class="octoOrange">High-volume lead search filters</p>
+    <p class="octoOrange paperProtoText">High-volume lead search filters</p>
     </div>
 
     <div class="paperProtoDiv">
     <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch1.png">
-    <p class="octoOrange">Homepage with card view</p>
+    <p class="octoOrange paperProtoText">Homepage with card view</p>
     </div>
 
     <div class="paperProtoDiv">
     <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch2.png">
-    <p class="octoOrange">Homepage with connectivity view</p>
+    <p class="octoOrange paperProtoText">Homepage with connectivity view</p>
     </div>
   </div>
 <!-- bottom 3 paper proptotypes -->
@@ -802,21 +806,21 @@
 
   <div class="paperProtoDiv">
     <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch5.png" >
-    <p class="octoOrange">List view with feedback prompt</p>
+    <p class="octoOrange paperProtoText">List view with feedback prompt</p>
   </div>
 
     <div class="paperProtoDiv">
     <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch4.png">
-    <p class="octoOrange">Individual search view</p>
+    <p class="octoOrange paperProtoText">Individual search view</p>
     </div>
 
     <div class="paperProtoDiv">
     <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch6.png">
-    <p class="octoOrange">Individual lead profile with newsfeed</p>
+    <p class="octoOrange paperProtoText">Individual lead profile with newsfeed</p>
     </div>
   </div>
 
-<div><p class="statement">Usability testing: salespeople feedback.</p></div>
+<div><p class="statement usabilityTitle">Usability testing: salespeople feedback.</p></div>
 
 <div class="top3Bottom3">
 
@@ -925,7 +929,7 @@
 <div class="designDecisions">
 
   <div class="decSections">
-    <div class="decCircle"><p class="decNumber">1</p></div>
+    <div class="decCircle"><p>1</p></div>
     <div class="decText">
       <div class="decPoints"><p>Give the salesperson more control over their lead list.</</p></div>
 
@@ -978,7 +982,7 @@
     <p class="buildText">Our final interactive wireframes encompass a number of features, including a quick and easy on-boarding for new clients, multiple views, a connectivity layout via an API with LinkedIn, a lead newsfeed, sorting capabilities, analytics, and an individual search engine.</p>
 </div>
 
-<div><p class="statement statmentOrange">Before &amp After.</p></div>
+<div><p class="statement statmentOrange beforeAndAfter">Before &amp After.</p></div>
 
 <div class="comparisons">
   <div class="listView">
@@ -1006,24 +1010,24 @@
 
     </div>
 
-  <div><p class="statement statmentOrange">Our interactive prototype.</div>
+  <div><p class="statement">Our interactive prototype.</div>
 
 <div class="prototypeLink">
   Click <a  href="https://invis.io/GM3VZTGAD">here</a> to see prototype.</div>
 
-<div class="statement">Tier 5 logo redesign with user feedback</div>
+<div class="statement statmentOrange logoTitle">Tier 5 logo redesign with user feedback</div>
 
 <div class="logoSecParent">
 
   <div class="logoSec">
     <div class="logoWithText">
-      <p class="logoTitle">Former Logos</p>
+      <p class="logoTitle octoGreen">Former Logos</p>
       <img class="octoLogo" alt="Old Octopus Logo" src="myimages/tier5/build/old-octo.png">
       <p>Flower? Ameba? Octopus?</p>
     </div>
 
     <div class="logoWithText">
-      <p class="logoTitle">New Logos</p>
+      <p class="logoTitle octoGreen">New Logos</p>
       <img class="octoLogoNew" alt="New Octopus Logo" src="myimages/tier5/build/octo-happy.png">
       <p>Happy Octopus</p>
     </div>
@@ -1047,14 +1051,7 @@
     <!-- logo parent -->
   </div>
 
-<!-- NEXT STEPS -->
-<!-- <div class="arrowContainer">
-
-  <!-- <img class="nextStepsArrow" alt="Arrow with Next Steps" src="myimages/tier5/build/next-steps-arrow.png"> -->
-
-<!-- </div> -->
-
-<div class="statement statmentOrange">Next Steps &amp Roll Out Phases.</div>
+<div class="statement statmentOrange rollOut">Next Steps &amp Roll Out Phases.</div>
 
 <div class="stepsParent">
   <div class="stepsSec">
