Fixing Venn Diagraphm

--- a/tier5.html
+++ b/tier5.html
@@ -648,8 +648,7 @@
 </table>
 </div>
     <div class="bracketDiv">
-        <!-- <img class="userBracket" alt="Downward facing bracket" src="myimages/tier5/synthesis/bracket.png"> -->
-        <p class="userFlowTitle octoGreen">Typical Salesperson's User Flow</p>
+        <div class="statement userFlowTitle">Typical Salesperson's User Flow.</div>
     </div>
     <div class="userFlow">
       <img class="userFlowImg" alt="Downward facing bracket" src="myimages/tier5/synthesis/user-flow.png">
