fix logo format

--- a/tier5.html
+++ b/tier5.html
@@ -421,7 +421,7 @@
     </div>
   </div>
 
-<div><p class="statement">In-depth interview insights.</p></div>
+<div><p class="statement">In-depth interview insights</p></div>
 
 <div class="brainBackground">
 
@@ -511,7 +511,7 @@
 </div>
 
 
-  <div><p class="statement">Initial research findings.</p></div>
+  <div><p class="statement">Initial research findings</p></div>
 
 <div class="findings">
     <div class="findingsCircle1"></div>
@@ -546,7 +546,7 @@
   <img class="journeyMap" alt="Salesperson's Journey Map" src="myimages/tier5/synthesis/journey-map.png">
 </div>
 
-  <p class="statement">Our personas detail the two main types of salespeople.</p>
+  <p class="statement">Our personas detail two main salespeople types</p>
 
 <div class="row personaParent">
   <!-- Ajay -->
@@ -648,7 +648,7 @@
 </table>
 </div>
     <div class="bracketDiv">
-        <div class="statement userFlowTitle">Typical Salesperson's User Flow.</div>
+        <div class="statement userFlowTitle">Salesperson's user flow</div>
     </div>
     <div class="userFlow">
       <img class="userFlowImg" alt="Downward facing bracket" src="myimages/tier5/synthesis/user-flow.png">
@@ -674,7 +674,7 @@
   <img class="venn" alt="Business-Design Goals Venn Diagram" src="myimages/tier5/synthesis/design-venn.png">
 </div>
 
-<div class="statement">Our solution: two high level experiences.</div>
+<div class="statement">Our solution: two high level experiences</div>
 
 <div class="experiences row">
   <div class="realTimeAndNur col-xs-12 col-sm-6">
@@ -711,7 +711,7 @@
 
 </div>
 
-  <div class="statement statmentOrange featureTitleMargins">Initial concept &amp features.</div>
+  <div class="statement statmentOrange featureTitleMargins">Initial concept &amp features</div>
 
 <div class="featuresList row">
   <div class="realTimeAndNur2 ">
@@ -758,7 +758,7 @@
         <!-- features -->
     </div>
 
-<div class="statement statementOrange">User testing.</div>
+<div class="statement statementOrange">User testing</div>
 
 <div class="testingCircleSec">
   <div class="userTestingRounds"><p >Three Rounds</p></div>
@@ -819,7 +819,7 @@
     </div>
   </div>
 
-<div><p class="statement usabilityTitle">Usability testing: salespeople feedback.</p></div>
+<div><p class="statement usabilityTitle">Usability testing: salespeople feedback</p></div>
 
 <div class="top3Bottom3">
 
@@ -907,7 +907,7 @@
 <!-- grandparents
 </div> -->
 
-<div><p class="statement">Usability test findings.</p></div>
+<div><p class="statement">Usability test findings</p></div>
 
 <div class="findings2PParent row center-text">
   <div class="findings2P col-xs-12 col-sm-6 heavyText ">
@@ -923,7 +923,7 @@
   </div>
 </div>
 
-<div><p class="statement statmentOrange">Design decisions.</p></div>
+<div><p class="statement statmentOrange">Design decisions</p></div>
 
 <div class="designDecisions">
 
@@ -981,7 +981,7 @@
     <p class="buildText">Our final interactive wireframes encompass a number of features, including a quick and easy on-boarding for new clients, multiple views, a connectivity layout via an API with LinkedIn, a lead newsfeed, sorting capabilities, analytics, and an individual search engine.</p>
 </div>
 
-<div><p class="statement statmentOrange beforeAndAfter">Before &amp After.</p></div>
+<div><p class="statement statmentOrange beforeAndAfter">Before &amp After</p></div>
 
 <div class="comparisons">
   <div class="listView">
@@ -1009,7 +1009,7 @@
 
     </div>
 
-  <div><p class="statement">Our interactive prototype.</div>
+  <div><p class="statement">Our interactive prototype</div>
 
 <div class="prototypeLink">
   Click <a  href="https://invis.io/GM3VZTGAD">here</a> to see prototype.</div>
@@ -1020,13 +1020,13 @@
 
   <div class="logoSec">
     <div class="logoWithText">
-      <p class="logoTitle octoGreen">Former Logos</p>
+      <p class="logoTitleBeforeAndAfter octoGreen">Former Logos</p>
       <img class="octoLogo" alt="Old Octopus Logo" src="myimages/tier5/build/old-octo.png">
       <p>Flower? Ameba? Octopus?</p>
     </div>
 
     <div class="logoWithText">
-      <p class="logoTitle octoGreen">New Logos</p>
+      <p class="logoTitleBeforeAndAfter octoGreen">New Logos</p>
       <img class="octoLogoNew" alt="New Octopus Logo" src="myimages/tier5/build/octo-happy.png">
       <p>Happy Octopus</p>
     </div>
@@ -1050,7 +1050,7 @@
     <!-- logo parent -->
   </div>
 
-<div class="statement statmentOrange rollOut">Next Steps &amp Roll Out Phases.</div>
+<div class="statement statmentOrange rollOut">Next steps &amp roll out phases</div>
 
 <div class="stepsParent">
   <div class="stepsSec">
